# cardano-indexer-starter

./: .gitignore  CHANGELOG.md  README.md  cabal.project  cardano-indexer-starter.cabal  flake.nix  fourmolu.yaml
.github/workflows/: build.yml
app/: Main.hs
src/Cardano/: Indexer.hs
src/Cardano/Indexer/: CLI.hs  ChainSync.hs  Config.hs  Ledger.hs  Reactor.hs
test/: Main.hs
