cabal-version: 3.4
name: cardano-indexer-starter
version: 0.1.0.0
synopsis: Template for Cardano indexers in Haskell
homepage: https://github.com/sgillespie/cardano-indexer-starter
license: Apache-2.0
license-file: LICENSE
author: Sean D Gillespie
maintainer: sean@mistersg.net
copyright: 2025 Sean Gillespie
category: Data
build-type: Simple
extra-doc-files: CHANGELOG.md

common all
  ghc-options:
    -Wall

  mixins:
    base hiding (Prelude),
    cardano-prelude (Cardano.Prelude as Prelude),
    cardano-prelude,

  build-depends:
    base ^>=4.18.2.1,
    bytestring,
    cardano-prelude,
    extra,
    transformers,

  default-extensions:
    DataKinds
    DerivingStrategies
    GADTs
    OverloadedStrings
    RecordWildCards
    TypeFamilies

  other-extensions:
    QuantifiedConstraints

  default-language: GHC2021

library
  import: all
  exposed-modules:
    Cardano.Indexer
    Cardano.Indexer.CLI
    Cardano.Indexer.ChainSync
    Cardano.Indexer.Config
    Cardano.Indexer.Reactor

  build-depends:
    cardano-api,
    cardano-binary,
    cardano-client >=0.5.1.0,
    cardano-ledger-byron,
    cardano-ledger-core,
    cardano-node,
    contra-tracer,
    filepath,
    io-classes,
    iohk-monitoring,
    network-mux,
    optparse-applicative,
    ouroboros-consensus,
    ouroboros-consensus-cardano,
    ouroboros-consensus-diffusion,
    ouroboros-consensus-protocol,
    ouroboros-network,
    ouroboros-network-api,
    ouroboros-network-framework,
    ouroboros-network-protocols,
    stm,
    strict-stm,
    typed-protocols,
    typed-protocols-stateful,
    unliftio,

  hs-source-dirs: src

executable cardano-indexer-starter
  import: all
  main-is: Main.hs
  build-depends:
    cardano-indexer-starter

  hs-source-dirs: app

test-suite cardano-indexer-starter-test
  import: all
  default-language: GHC2021
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    cardano-indexer-starter
